# iPhoneLabelPrinter

./: .gitignore  AGENTS.md  Launch iPhoneLabelPrinter.bat  Launch iPhoneLabelPrinter.command  README.md  _printer_cups.py  _printer_win32.py  app.py  appledb_client.py  device_catalog.py  history.py  index.html  iphone_reader.py  label_generator.py  model_mapping.py  package-lock.json  package.json  printer.py  requirements.txt  tauri_bridge.py  updater.py  utils.py  variant_data.py  variant_resolver.py  version.py
.github/workflows/: catalog-refresh.yml  ci.yml  release.yml
docs/: release-validation.md  tauri-migration.md
scripts/: catalog-lib.mjs  catalog-lib.test.mjs  catalog-overrides.json  update-catalog.mjs  validate-catalog.mjs
src/: actions.ts  api.ts  main.ts  settings.ts  state.ts  styles.css  types.ts  views.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/data/: color_code_variants.json  model_number_variants.json  product_color_options.json  product_type_marketing_names.json
src-tauri/src/: catalog.rs  command_runner.rs  device.rs  error.rs  history.rs  label.rs  lib.rs  main.rs  printer.rs  python_bridge.rs  types.rs
tests/: test_history.py  test_label_generator.py  test_model_mapping.py  test_updater.py  test_utils.py  test_variant_resolver.py
tools/: update_device_catalog.py  update_variant_data.py
