[package]
name = "iphone-label-printer-tauri"
version = "0.1.0"
description = "Tauri migration shell for iPhoneLabelPrinter"
authors = ["iPhoneLabelPrinter maintainers"]
edition = "2021"

[lib]
name = "iphone_label_printer_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
csv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
