[package]
name = "iphone-label-printer-tauri"
version = "1.0.11"
description = "Tauri migration shell for iPhoneLabelPrinter"
authors = ["iPhoneLabelPrinter maintainers"]
edition = "2021"

[lib]
name = "iphone_label_printer_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["clock"] }
csv = "1"
qrcode = { version = "0.14", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.1"
